tests/return_new/return_new.exp
Error ----------------------------------------------------------------------------------------------------- test2.js:7:7

Cannot assign empty string to `d.x` because string [1] is incompatible with number [2]. [incompatible-type]

   test2.js:7:7
   7| d.x = ""; // error, string ~/~ number (but property x is found)
            ^^ [1]

References:
   test2.js:2:23
   2|   constructor(): { x: number }; // OK
                            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:9:2

Cannot cast `new D` to `D` because object type [1] is incompatible with `D` [2]. [incompatible-cast]

   test2.js:9:2
   9| (new D: D); // error, new D is an object, D not in proto chain
       ^^^^^ [1]

References:
   test2.js:9:9
   9| (new D: D); // error, new D is an object, D not in proto chain
              ^ [2]



Found 2 errors
